--- a/phala-cloud/attestation/api-quickstart.mdx
+++ b/phala-cloud/attestation/api-quickstart.mdx
@@ -1,9 +1,9 @@
 ---
-description: Get a shareable Intel DCAP quote verified with Phala Cloud's API in 5 minutes
+description: Learn how to verify Intel TDX attestation quotes using Phala Cloud's API.
 title: Cloud Attestation API
 ---
 
-## Verify Your Quote in 5 Minutes
+## Verify your quote
 
 You have an attestation quote and want to verify it using Phala Cloud's API. This guide gets you working fast.
 
